[project]
name = "001-chatbot-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.6.0",
    "gradio-pdf>=0.0.24",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.10",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.1",
]
