[project]
name = "001-chatbot-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "defusedxml>=0.7.1",
    "gensim>=4.4.0",
    "gradio>=6.6.0",
    "gradio-pdf>=0.0.24",
    "ipykernel>=7.2.0",
    "kiwipiepy>=0.22.2",
    "langchain>=1.2.10",
    "langchain-core>=1.2.14",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.10",
    "matplotlib>=3.10.8",
    "numpy==1.26.4",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers==2.7.0",
    "torch==2.2.2",
    "transformers==4.41.2",
]
[tool.uv]
environments = [
  "sys_platform == 'darwin' and platform_machine == 'x86_64' and python_version == '3.12'"
]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]